crates/figue/tests/integration/snapshots/main__integration__deser_errors__deser_error_env_overrides_valid_file.snap
---
source: crates/figue/tests/integration/deser_errors.rs
expression: "$crate :: common :: strip_ansi(& report.to_string())"
---
Error: failed to parse "invalid" as u16 at config.port
   ╭─[ config.json:3:17 ]
   │
 3 │         "host": "localhost"
   │                 ─────┬─────  
   │                      ╰─────── failed to parse "invalid" as u16 at config.port
───╯
